; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_bi_copy_48w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_bi_copy_48w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32, i32)* @hevc_bi_copy_48w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_bi_copy_48w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca %struct.TYPE_7__, align 4
  %23 = alloca %struct.TYPE_7__, align 4
  %24 = alloca %struct.TYPE_7__, align 4
  %25 = alloca %struct.TYPE_7__, align 4
  %26 = alloca %struct.TYPE_7__, align 4
  %27 = alloca %struct.TYPE_7__, align 4
  %28 = alloca %struct.TYPE_7__, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  %48 = alloca i32, align 4
  %49 = alloca i32, align 4
  %50 = alloca i32, align 4
  %51 = alloca i32, align 4
  %52 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %53 = bitcast %struct.TYPE_7__* %28 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %53, i8 0, i64 4, i1 false)
  %54 = load i32, i32* %14, align 4
  %55 = ashr i32 %54, 1
  store i32 %55, i32* %15, align 4
  br label %56

56:                                               ; preds = %60, %7
  %57 = load i32, i32* %15, align 4
  %58 = add nsw i32 %57, -1
  store i32 %58, i32* %15, align 4
  %59 = icmp ne i32 %57, 0
  br i1 %59, label %60, label %249

60:                                               ; preds = %56
  %61 = load i32*, i32** %8, align 8
  %62 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  %64 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %65 = load i32, i32* %64, align 4
  %66 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %67 = load i32, i32* %66, align 4
  %68 = call i32 @LD_SB3(i32* %61, i32 16, i32 %63, i32 %65, i32 %67)
  %69 = load i32, i32* %9, align 4
  %70 = load i32*, i32** %8, align 8
  %71 = sext i32 %69 to i64
  %72 = getelementptr inbounds i32, i32* %70, i64 %71
  store i32* %72, i32** %8, align 8
  %73 = load i32*, i32** %8, align 8
  %74 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %75 = load i32, i32* %74, align 4
  %76 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %77 = load i32, i32* %76, align 4
  %78 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = call i32 @LD_SB3(i32* %73, i32 16, i32 %75, i32 %77, i32 %79)
  %81 = load i32, i32* %9, align 4
  %82 = load i32*, i32** %8, align 8
  %83 = sext i32 %81 to i64
  %84 = getelementptr inbounds i32, i32* %82, i64 %83
  store i32* %84, i32** %8, align 8
  %85 = load i32*, i32** %10, align 8
  %86 = load i32, i32* %40, align 4
  %87 = load i32, i32* %41, align 4
  %88 = load i32, i32* %42, align 4
  %89 = load i32, i32* %43, align 4
  %90 = load i32, i32* %44, align 4
  %91 = load i32, i32* %45, align 4
  %92 = call i32 @LD_SH6(i32* %85, i32 8, i32 %86, i32 %87, i32 %88, i32 %89, i32 %90, i32 %91)
  %93 = load i32, i32* %11, align 4
  %94 = load i32*, i32** %10, align 8
  %95 = sext i32 %93 to i64
  %96 = getelementptr inbounds i32, i32* %94, i64 %95
  store i32* %96, i32** %10, align 8
  %97 = load i32*, i32** %10, align 8
  %98 = load i32, i32* %46, align 4
  %99 = load i32, i32* %47, align 4
  %100 = load i32, i32* %48, align 4
  %101 = load i32, i32* %49, align 4
  %102 = load i32, i32* %50, align 4
  %103 = load i32, i32* %51, align 4
  %104 = call i32 @LD_SH6(i32* %97, i32 8, i32 %98, i32 %99, i32 %100, i32 %101, i32 %102, i32 %103)
  %105 = load i32, i32* %11, align 4
  %106 = load i32*, i32** %10, align 8
  %107 = sext i32 %105 to i64
  %108 = getelementptr inbounds i32, i32* %106, i64 %107
  store i32* %108, i32** %10, align 8
  %109 = load i32, i32* %29, align 4
  %110 = load i32, i32* %30, align 4
  %111 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %112 = load i32, i32* %111, align 4
  %113 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %114 = load i32, i32* %113, align 4
  %115 = call i32 @ILVRL_B2_SH(i32 %112, i32 %114, i32 %109, i32 %110)
  %116 = load i32, i32* %31, align 4
  %117 = load i32, i32* %32, align 4
  %118 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %119 = load i32, i32* %118, align 4
  %120 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %121 = load i32, i32* %120, align 4
  %122 = call i32 @ILVRL_B2_SH(i32 %119, i32 %121, i32 %116, i32 %117)
  %123 = load i32, i32* %33, align 4
  %124 = load i32, i32* %34, align 4
  %125 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %126 = load i32, i32* %125, align 4
  %127 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %128 = load i32, i32* %127, align 4
  %129 = call i32 @ILVRL_B2_SH(i32 %126, i32 %128, i32 %123, i32 %124)
  %130 = load i32, i32* %35, align 4
  %131 = load i32, i32* %36, align 4
  %132 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %133 = load i32, i32* %132, align 4
  %134 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %135 = load i32, i32* %134, align 4
  %136 = call i32 @ILVRL_B2_SH(i32 %133, i32 %135, i32 %130, i32 %131)
  %137 = load i32, i32* %37, align 4
  %138 = load i32, i32* %38, align 4
  %139 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %140 = load i32, i32* %139, align 4
  %141 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %142 = load i32, i32* %141, align 4
  %143 = call i32 @ILVRL_B2_SH(i32 %140, i32 %142, i32 %137, i32 %138)
  %144 = load i32, i32* %39, align 4
  %145 = load i32, i32* %52, align 4
  %146 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %147 = load i32, i32* %146, align 4
  %148 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %149 = load i32, i32* %148, align 4
  %150 = call i32 @ILVRL_B2_SH(i32 %147, i32 %149, i32 %144, i32 %145)
  %151 = load i32, i32* %29, align 4
  %152 = load i32, i32* %30, align 4
  %153 = load i32, i32* %31, align 4
  %154 = load i32, i32* %32, align 4
  %155 = call i32 @SLLI_4V(i32 %151, i32 %152, i32 %153, i32 %154, i32 6)
  %156 = load i32, i32* %33, align 4
  %157 = load i32, i32* %34, align 4
  %158 = load i32, i32* %35, align 4
  %159 = load i32, i32* %36, align 4
  %160 = call i32 @SLLI_4V(i32 %156, i32 %157, i32 %158, i32 %159, i32 6)
  %161 = load i32, i32* %37, align 4
  %162 = load i32, i32* %38, align 4
  %163 = load i32, i32* %39, align 4
  %164 = load i32, i32* %52, align 4
  %165 = call i32 @SLLI_4V(i32 %161, i32 %162, i32 %163, i32 %164, i32 6)
  %166 = load i32, i32* %40, align 4
  %167 = load i32, i32* %41, align 4
  %168 = load i32, i32* %42, align 4
  %169 = load i32, i32* %43, align 4
  %170 = load i32, i32* %29, align 4
  %171 = load i32, i32* %30, align 4
  %172 = load i32, i32* %31, align 4
  %173 = load i32, i32* %32, align 4
  %174 = load i32, i32* %29, align 4
  %175 = load i32, i32* %30, align 4
  %176 = load i32, i32* %31, align 4
  %177 = load i32, i32* %32, align 4
  %178 = call i32 @HEVC_BI_RND_CLIP4_MAX_SATU(i32 %166, i32 %167, i32 %168, i32 %169, i32 %170, i32 %171, i32 %172, i32 %173, i32 7, i32 %174, i32 %175, i32 %176, i32 %177)
  %179 = load i32, i32* %44, align 4
  %180 = load i32, i32* %45, align 4
  %181 = load i32, i32* %46, align 4
  %182 = load i32, i32* %47, align 4
  %183 = load i32, i32* %33, align 4
  %184 = load i32, i32* %34, align 4
  %185 = load i32, i32* %35, align 4
  %186 = load i32, i32* %36, align 4
  %187 = load i32, i32* %33, align 4
  %188 = load i32, i32* %34, align 4
  %189 = load i32, i32* %35, align 4
  %190 = load i32, i32* %36, align 4
  %191 = call i32 @HEVC_BI_RND_CLIP4_MAX_SATU(i32 %179, i32 %180, i32 %181, i32 %182, i32 %183, i32 %184, i32 %185, i32 %186, i32 7, i32 %187, i32 %188, i32 %189, i32 %190)
  %192 = load i32, i32* %48, align 4
  %193 = load i32, i32* %49, align 4
  %194 = load i32, i32* %50, align 4
  %195 = load i32, i32* %51, align 4
  %196 = load i32, i32* %37, align 4
  %197 = load i32, i32* %38, align 4
  %198 = load i32, i32* %39, align 4
  %199 = load i32, i32* %52, align 4
  %200 = load i32, i32* %37, align 4
  %201 = load i32, i32* %38, align 4
  %202 = load i32, i32* %39, align 4
  %203 = load i32, i32* %52, align 4
  %204 = call i32 @HEVC_BI_RND_CLIP4_MAX_SATU(i32 %192, i32 %193, i32 %194, i32 %195, i32 %196, i32 %197, i32 %198, i32 %199, i32 7, i32 %200, i32 %201, i32 %202, i32 %203)
  %205 = load i32, i32* %30, align 4
  %206 = load i32, i32* %29, align 4
  %207 = load i32, i32* %32, align 4
  %208 = load i32, i32* %31, align 4
  %209 = load i32, i32* %34, align 4
  %210 = load i32, i32* %33, align 4
  %211 = load i32, i32* %16, align 4
  %212 = load i32, i32* %17, align 4
  %213 = load i32, i32* %18, align 4
  %214 = call i32 @PCKEV_B3_UB(i32 %205, i32 %206, i32 %207, i32 %208, i32 %209, i32 %210, i32 %211, i32 %212, i32 %213)
  %215 = load i32, i32* %36, align 4
  %216 = load i32, i32* %35, align 4
  %217 = load i32, i32* %38, align 4
  %218 = load i32, i32* %37, align 4
  %219 = load i32, i32* %52, align 4
  %220 = load i32, i32* %39, align 4
  %221 = load i32, i32* %19, align 4
  %222 = load i32, i32* %20, align 4
  %223 = load i32, i32* %21, align 4
  %224 = call i32 @PCKEV_B3_UB(i32 %215, i32 %216, i32 %217, i32 %218, i32 %219, i32 %220, i32 %221, i32 %222, i32 %223)
  %225 = load i32, i32* %16, align 4
  %226 = load i32, i32* %17, align 4
  %227 = load i32*, i32** %12, align 8
  %228 = call i32 @ST_UB2(i32 %225, i32 %226, i32* %227, i32 16)
  %229 = load i32, i32* %18, align 4
  %230 = load i32*, i32** %12, align 8
  %231 = getelementptr inbounds i32, i32* %230, i64 32
  %232 = call i32 @ST_UB(i32 %229, i32* %231)
  %233 = load i32, i32* %13, align 4
  %234 = load i32*, i32** %12, align 8
  %235 = sext i32 %233 to i64
  %236 = getelementptr inbounds i32, i32* %234, i64 %235
  store i32* %236, i32** %12, align 8
  %237 = load i32, i32* %19, align 4
  %238 = load i32, i32* %20, align 4
  %239 = load i32*, i32** %12, align 8
  %240 = call i32 @ST_UB2(i32 %237, i32 %238, i32* %239, i32 16)
  %241 = load i32, i32* %21, align 4
  %242 = load i32*, i32** %12, align 8
  %243 = getelementptr inbounds i32, i32* %242, i64 32
  %244 = call i32 @ST_UB(i32 %241, i32* %243)
  %245 = load i32, i32* %13, align 4
  %246 = load i32*, i32** %12, align 8
  %247 = sext i32 %245 to i64
  %248 = getelementptr inbounds i32, i32* %246, i64 %247
  store i32* %248, i32** %12, align 8
  br label %56

249:                                              ; preds = %56
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @LD_SB3(i32*, i32, i32, i32, i32) #2

declare dso_local i32 @LD_SH6(i32*, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ILVRL_B2_SH(i32, i32, i32, i32) #2

declare dso_local i32 @SLLI_4V(i32, i32, i32, i32, i32) #2

declare dso_local i32 @HEVC_BI_RND_CLIP4_MAX_SATU(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @PCKEV_B3_UB(i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ST_UB2(i32, i32, i32*, i32) #2

declare dso_local i32 @ST_UB(i32, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
